--- a/template/home.html
+++ b/template/home.html
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block content %}
-    <section class="home-page">
-        <div class="container">
+    <section class="home-page" style="height: 100vh">
+        <div class="container my-5">
             <h1 class="text-center m-3">Welcome To AutoPlate</h1>
             <div class="row">
                 <div class="col-12 d-flex align-items-center justify-content-center gap-5">
@@ -17,7 +17,7 @@
                                 <h5 class="card-text">{{ plate.description }}</h5>
                                 <p class="cart-text">{{ plate.deadline }}</p>
                                 <p class="cart-text">${{ plate.start_price }}</p>
-                                <a href="#" class="btn btn-primary">Read More</a>
+                                <a href="{% url 'plate_detail' plate.id %}" class="btn btn-primary">Detail</a>
                             </div>
                         </div>
                     {% endfor %}
