--- a/template/plates/plates.html
+++ b/template/plates/plates.html
@@ -1,10 +1,27 @@
 {% extends 'base.html' %}
 
 {% block title %}
-	Plates
+    Plates
 {% endblock %}
 {% block content %}
-	<h1 class="text-center m-3">
-        Welcome
-    </h1>
+    <section class="plates" style="height: 100vh">
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-12 d-flex align-items-center justify-content-center gap-5">
+                    {% for i in plate %}
+                        <div class="card" style="width: 18rem;">
+                            <h1 class="text-center m-3">0{{ i.region_int }} | {{ i.plate_number }}</h1>
+                            <div class="card-body">
+                                <h3 class="card-title">{{ i.region }}</h3>
+                                <h5 class="card-text">{{ i.description }}</h5>
+                                <p class="cart-text">{{ i.deadline }}</p>
+                                <p class="cart-text">${{ i.start_price }}</p>
+                                <a href="{% url 'plate_detail' i.id %}" class="btn btn-primary">Detail</a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
